err/openformats.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bin'...
Listing './lib/python3.5/site-packages/openformats'...
Listing './lib/python3.5/site-packages/openformats/formats'...
Compiling './lib/python3.5/site-packages/openformats/formats/json.py'...
***   File "./lib/python3.5/site-packages/openformats/formats/json.py", line 24
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openformats/tests'...
Listing './lib/python3.5/site-packages/openformats/tests/formats'...
Listing './lib/python3.5/site-packages/openformats/tests/formats/android'...
Listing './lib/python3.5/site-packages/openformats/tests/formats/beta_android'...
Listing './lib/python3.5/site-packages/openformats/tests/formats/beta_keyvaluejson'...
Listing './lib/python3.5/site-packages/openformats/tests/formats/common'...
Listing './lib/python3.5/site-packages/openformats/tests/formats/plaintext'...
Listing './lib/python3.5/site-packages/openformats/tests/formats/po'...
Listing './lib/python3.5/site-packages/openformats/tests/formats/srt'...
Listing './lib/python3.5/site-packages/openformats/tests/formats/stringsdict'...
Listing './lib/python3.5/site-packages/openformats/tests/util_tests'...
Listing './lib/python3.5/site-packages/openformats/tests/utils'...
Listing './lib/python3.5/site-packages/openformats/utils'...
Compiling './lib/python3.5/site-packages/openformats/utils/xml.py'...
***   File "./lib/python3.5/site-packages/openformats/utils/xml.py", line 145
    print "{}: {}".format(string.attrs['name'], string.inner)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openformats-0.0.34.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/polib-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
